# object_tracking_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml  package.xml.save  package.xml.save.2
msg/: Detection.msg  FinalObject.msg  FinalObjectList.msg  ObjectSpeed.msg  ObjectSpeedList.msg  TrackedObjects.msg
scripts/: camera_streamer.py  fusion_node.py  object_tracker.py  object_tracker.py.save  optical_flow.py  optical_flow_node.py  semantic_segmentation.py  yolo_detector.py
